Bug 80280 - DIALOG: uno commands with missing icons appearing in 'change icon' dialog
Summary: DIALOG: uno commands with missing icons appearing in 'change icon' dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: low minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: BSA target:4.4.0 target:4.3.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-20 10:22 UTC by Matthias Basler
Modified: 2014-11-29 17:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing one missing icon. There are more if you scroll down the dialog. (44.07 KB, image/png)
2014-06-20 10:22 UTC, Matthias Basler
Details
screenshot (32.25 KB, image/png)
2014-11-08 22:14 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Basler 2014-06-20 10:22:08 UTC
Created attachment 101426 [details]
Screenshot showing one missing icon. There are more if you scroll down the dialog.

When customizing the toolbar I sometimes add actions to a toolbar which have no own icon. It is possible to assign an icon to them using the "Change -> Exchange icon" action in the Customization dialog. Now the "Exchange icon" dialog comes up

The "Exchange icon" dialog shows a lot of icons, but it also shows a few texts where obviously the icon is missing. Since I see no point in choosing a text for an icon I deduct this to be a bug.
Operating System: Windows 7
Version: 4.3.0.1 rc
Comment 1 Yousuf Philips (jay) (retired) 2014-11-08 21:59:47 UTC
Hello Matthias,

Thank you for submitting the bug. I can confirm that the bug is available in master on Linux.
Comment 2 Yousuf Philips (jay) (retired) 2014-11-08 22:14:02 UTC
Created attachment 109141 [details]
screenshot
Comment 3 Yousuf Philips (jay) (retired) 2014-11-08 22:15:08 UTC
Version: 4.4.0.0.alpha1+
Build ID: d59b9b4af36148e4d8df8f3e3492116d378642e2
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-11-06_00:36:43
Comment 4 Commit Notification 2014-11-18 10:37:22 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf26921658c0905a4d2dda13f91e3db99c76ade6

fdo#80280 Don't add items with no bitmaps

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.