fdo#80280 Don't add items with no bitmaps

Change-Id: I625aff5d2dcae0b1491fa77b04605d4579ec8530