cui/source/customize/cfg.cxx
@@ -4887,17 +4887,20 @@ SvxIconSelectorDialog::SvxIconSelectorDialog( vcl::Window *pWindow,
         if ( graphics.getLength() > 0 )
         {
             Image img = Image( graphics[ 0 ] );
-            pTbSymbol->InsertItem( nId, img, pConstIter->first );
+            if ( !img.GetBitmapEx().IsEmpty() )
+            {
+                pTbSymbol->InsertItem( nId, img, pConstIter->first );
 
-            uno::Reference< graphic::XGraphic > xGraphic = graphics[ 0 ];
+                uno::Reference< graphic::XGraphic > xGraphic = graphics[ 0 ];
 
-            if ( xGraphic.is() )
-                xGraphic->acquire();
+                if ( xGraphic.is() )
+                    xGraphic->acquire();
 
-            pTbSymbol->SetItemData(
-                nId, static_cast< void * > ( xGraphic.get() ) );
+                pTbSymbol->SetItemData(
+                    nId, static_cast< void * > ( xGraphic.get() ) );
 
-            ++nId;
+                ++nId;
+            }
         }
 
         ++pConstIter;
